--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          
+      - name: Set outputs
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
       - name: Build and Push Docker Images
         id: docker_build
@@ -37,4 +41,4 @@ jobs:
         with:
           file: Dockerfile
           push: true
-          tags: gaurav04/go-app:${{ github.sha }}
+          tags: gaurav04/go-app:${{ steps.vars.outputs.sha_short  }}
